--- a/AlfaSdk/src/main/res/layout/fragment_account.xml
+++ b/AlfaSdk/src/main/res/layout/fragment_account.xml
@@ -288,7 +288,7 @@
             android:textColor="@android:color/white" />
     </LinearLayout>
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/acc_listView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
