--- a/AlfaSdk/src/main/res/layout/fragment_cash_book.xml
+++ b/AlfaSdk/src/main/res/layout/fragment_cash_book.xml
@@ -6,8 +6,7 @@
     android:clickable="true"
     android:focusable="true"
     android:focusableInTouchMode="true"
-    android:orientation="vertical"
-    tools:context="com.softech.bipldirect.Fragments.CashBookFragment">
+    android:orientation="vertical">
     <LinearLayout
         android:id="@+id/linearLayout10"
         android:layout_width="match_parent"
@@ -120,7 +119,7 @@
 
     </LinearLayout>
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView_cashBook"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
