Added alfa theme colors

--- a/AlfaSdk/src/main/res/layout/activity_main.xml
+++ b/AlfaSdk/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         android:layout_width="280dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="@color/colorPrimary"
+        android:background="@color/redDark"
         android:fitsSystemWindows="true">
 
         <RelativeLayout
