--- a/AlfaSdk/src/main/res/layout/drawer_list_item.xml
+++ b/AlfaSdk/src/main/res/layout/drawer_list_item.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/redDark">
+    android:background="@color/ledRed">
 
     <ImageView
         android:id="@+id/icon"
