Added alfa scheme colors.

--- a/AlfaSdk/src/main/res/layout/app_bar_main.xml
+++ b/AlfaSdk/src/main/res/layout/app_bar_main.xml
@@ -17,7 +17,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/ledRed"
+            android:background="@color/alfaRed"
             app:titleTextColor="@color/white"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
