--- a/AlfaSdk/src/main/res/layout/activity_main.xml
+++ b/AlfaSdk/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
+    android:background="@color/alfaRed"
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
@@ -25,7 +25,7 @@
         android:layout_width="280dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="@color/redDark"
+        android:background="@color/alfaRed"
         android:fitsSystemWindows="true">
 
         <RelativeLayout
