--- a/AlfaSdk/src/main/res/layout/fragment_market.xml
+++ b/AlfaSdk/src/main/res/layout/fragment_market.xml
@@ -77,6 +77,21 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:id="@+id/backbtn"
+        android:layout_margin="16dp"
+        android:clickable="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="20dp"
+        android:backgroundTint="@color/alfaRed"
+        android:layout_marginBottom="20dp"
+        android:src="@drawable/back_btn"
+        />
+
 
     <LinearLayout
         android:id="@+id/search_list_view"
