--- a/AlfaSdk/src/main/res/values/colors.xml
+++ b/AlfaSdk/src/main/res/values/colors.xml
@@ -34,6 +34,7 @@
     <color name="greencolor">#00ff00</color>
 
     <color name="ledRed">#ec0001</color>
+    <color name="alfaRed">#b22925</color>
     <color name="ledGreen">#00ff00</color>
     <color name="textSymbolDetailColor">#A5A5A5</color>
 
