--- a/AlfaSdk/src/main/res/layout/dialog_input_pin.xml
+++ b/AlfaSdk/src/main/res/layout/dialog_input_pin.xml
@@ -7,8 +7,8 @@
 
     <!-- action -->
     <LinearLayout
-        android:layout_marginStart="@dimen/_4sdp"
-        android:layout_marginLeft="@dimen/_4sdp"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -25,16 +25,16 @@
             android:layout_width="match_parent"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_8sdp"
-            android:layout_marginLeft="@dimen/_8sdp"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
             android:textColor="@color/dialog_text_green" />
 
     </LinearLayout>
 
     <!-- Symbol -->
     <LinearLayout
-        android:layout_marginStart="@dimen/_4sdp"
-        android:layout_marginLeft="@dimen/_4sdp"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -51,16 +51,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_marginStart="@dimen/_8sdp"
-            android:layout_marginLeft="@dimen/_8sdp"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
             android:textColor="@color/dialog_text_green" />
 
     </LinearLayout>
 
     <!-- Volume -->
     <LinearLayout
-        android:layout_marginStart="@dimen/_4sdp"
-        android:layout_marginLeft="@dimen/_4sdp"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -77,16 +77,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_marginStart="@dimen/_8sdp"
-            android:layout_marginLeft="@dimen/_8sdp"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
             android:textColor="@color/dialog_text_green" />
 
     </LinearLayout>
 
     <!-- Price -->
     <LinearLayout
-        android:layout_marginStart="@dimen/_4sdp"
-        android:layout_marginLeft="@dimen/_4sdp"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -103,16 +103,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_marginStart="@dimen/_8sdp"
-            android:layout_marginLeft="@dimen/_8sdp"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
             android:textColor="@color/dialog_text_green" />
 
     </LinearLayout>
 
     <!-- Estimated value -->
     <LinearLayout
-        android:layout_marginStart="@dimen/_4sdp"
-        android:layout_marginLeft="@dimen/_4sdp"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -129,8 +129,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_marginStart="@dimen/_8sdp"
-            android:layout_marginLeft="@dimen/_8sdp"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
             android:textColor="@color/dialog_text_green" />
 
     </LinearLayout>
@@ -139,8 +139,8 @@
         android:id="@+id/editText2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/_4sdp"
-        android:layout_marginStart="@dimen/_4sdp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginStart="4dp"
         android:hint="@string/enter_pin_code"
         android:ems="10"
         android:textColor="@android:color/black"
