--- a/app/src/main/res/layout/activity_main_app.xml
+++ b/app/src/main/res/layout/activity_main_app.xml
@@ -10,7 +10,6 @@
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
-       android:text="login"
-       />
+       android:text="login" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
