--- a/AlfaSdk/src/main/res/layout/fragment_setting.xml
+++ b/AlfaSdk/src/main/res/layout/fragment_setting.xml
@@ -12,16 +12,16 @@
     tools:context=".Fragments.SettingFragment">
 
 
-    <TextView
-        android:id="@+id/text_change_pass"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:drawableEnd="@drawable/arrowright2x"
-        android:drawableRight="@drawable/arrowright2x"
-        android:text="@string/change_pass"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="@android:color/black" />
+<!--    <TextView-->
+<!--        android:id="@+id/text_change_pass"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_margin="10dp"-->
+<!--        android:drawableEnd="@drawable/arrowright2x"-->
+<!--        android:drawableRight="@drawable/arrowright2x"-->
+<!--        android:text="@string/change_pass"-->
+<!--        android:textAppearance="@style/TextAppearance.AppCompat.Large"-->
+<!--        android:textColor="@android:color/black" />-->
 
     <TextView
         android:id="@+id/text_change_pin"
