--- a/AlfaSdk/src/main/res/layout/fragment_change_pin.xml
+++ b/AlfaSdk/src/main/res/layout/fragment_change_pin.xml
@@ -10,7 +10,7 @@
     android:padding="30dp"
     tools:context=".Fragments.ChangePassFragment">
 
-    <android.support.v7.widget.AppCompatEditText
+    <EditText
         android:id="@+id/edittext_old_pin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -23,7 +23,7 @@
         android:textColor="@android:color/black"
         android:textColorHint="@color/blinkGrey" />
 
-    <android.support.v7.widget.AppCompatEditText
+    <EditText
         android:id="@+id/edittext_new_pin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -37,7 +37,7 @@
         android:textColor="@android:color/black"
         android:textColorHint="@color/blinkGrey" />
 
-    <android.support.v7.widget.AppCompatEditText
+    <EditText
         android:id="@+id/edittext_confirm_pin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
