--- a/AlfaSdk/src/main/res/layout/activity_menu.xml
+++ b/AlfaSdk/src/main/res/layout/activity_menu.xml
@@ -11,4 +11,10 @@
         android:id="@+id/rvNumbers"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/fragment_container"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
