--- a/AlfaSdk/src/main/res/layout/fragment_margin_detail.xml
+++ b/AlfaSdk/src/main/res/layout/fragment_margin_detail.xml
@@ -42,7 +42,7 @@
 
     </LinearLayout>
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_below="@id/linearLayout10"
         android:id="@+id/custody_listView"
         android:layout_width="match_parent"
