--- a/AlfaSdk/src/main/res/layout/fragment_menu.xml
+++ b/AlfaSdk/src/main/res/layout/fragment_menu.xml
@@ -31,6 +31,8 @@
         android:layout_width="match_parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="20dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvOneTapLaunch"
         android:layout_height="wrap_content"/>
