--- a/AlfaSdk/src/main/res/layout/fragment_market.xml
+++ b/AlfaSdk/src/main/res/layout/fragment_market.xml
@@ -14,13 +14,12 @@
     <RelativeLayout
         android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
-        android:layout_height="50dp">
+        android:layout_height="@dimen/_50sdp">
 
         <ImageView
             android:id="@+id/left_arrow"
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:layout_gravity="center_vertical"
@@ -31,11 +30,9 @@
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/pager"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/_50sdp"
             android:layout_centerVertical="true"
             android:layout_toEndOf="@+id/left_arrow"
-            android:layout_toLeftOf="@+id/right_arrow"
-            android:layout_toRightOf="@+id/left_arrow"
             android:layout_toStartOf="@+id/right_arrow" />
 
 
