--- a/AlfaSdk/src/main/res/layout/fragment_quotes.xml
+++ b/AlfaSdk/src/main/res/layout/fragment_quotes.xml
@@ -408,26 +408,32 @@
                     android:weightSum="3">
 
                     <TextView
+                        android:paddingStart="5dp"
+                        android:paddingEnd="5dp"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:gravity="center"
+                        android:gravity="start"
                         android:text="Ranges"
                         android:textColor="@android:color/black" />
 
                     <TextView
+                        android:paddingStart="5dp"
+                        android:paddingEnd="5dp"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:gravity="center"
+                        android:gravity="start"
                         android:text="Price(avg)"
                         android:textColor="@android:color/black" />
 
                     <TextView
+                        android:paddingStart="5dp"
+                        android:paddingEnd="5dp"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:gravity="center"
+                        android:gravity="start"
                         android:text="Vol(avg)"
                         android:textColor="@android:color/black" />
                 </TableRow>
@@ -683,13 +689,12 @@
 
     <Button
         android:id="@+id/trade_btn"
-        android:backgroundTint="@color/redDark"
+        android:backgroundTint="@color/alfaRed"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_45sdp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
         android:text="Trade"
         android:textColor="@android:color/white" />
 
