--- a/AlfaSdk/src/main/res/layout/fragment_exchange.xml
+++ b/AlfaSdk/src/main/res/layout/fragment_exchange.xml
@@ -1,13 +1,18 @@
-<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/exchange_list"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    android:clickable="true"
-    android:focusable="true"
-    android:focusableInTouchMode="true"
-    android:orientation="vertical"
-    android:padding="10dp"
-    tools:context=".Fragments.ExchangeFragment" />
+    tools:context=".Fragments.ExchangeFragment">
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/exchange_list"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        tools:listitem="@layout/exchanges_list_item_row"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
 
