--- a/AlfaSdk/src/main/res/layout/fragment_order_status.xml
+++ b/AlfaSdk/src/main/res/layout/fragment_order_status.xml
@@ -11,7 +11,6 @@
         android:id="@+id/linearLayout4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:orientation="horizontal">
@@ -19,7 +18,7 @@
         <Button
             android:id="@+id/orderbtn"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="45dp"
             android:layout_weight="1"
             android:background="@drawable/selected"
             android:text="Order"
@@ -28,7 +27,7 @@
         <Button
             android:id="@+id/tradebtn"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="45dp"
             android:layout_weight="1"
             android:background="@drawable/unselected"
             android:text="Trade"
