--- a/AlfaSdk/src/main/res/drawable-v24/selector_radio_button.xml
+++ b/AlfaSdk/src/main/res/drawable-v24/selector_radio_button.xml
@@ -3,13 +3,11 @@
     <item android:state_checked="true">
         <shape android:shape="rectangle">
             <solid android:color="@color/colorAccent" />
-            <stroke android:width="1dp" android:color="@color/colorAccent" />
         </shape>
     </item>
     <item android:state_checked="false">
         <shape android:shape="rectangle">
-            <solid android:color="@android:color/transparent" />
-            <stroke android:width="1dp" android:color="@color/colorAccent" />
+            <solid android:color="@color/greyDarkBar" />
         </shape>
     </item>
 
