--- a/AlfaSdk/src/main/res/layout/fragment_events.xml
+++ b/AlfaSdk/src/main/res/layout/fragment_events.xml
@@ -7,23 +7,13 @@
     android:focusable="true"
     android:focusableInTouchMode="true"
     android:clickable="true"
-    android:padding="10dp"
     tools:context=".Fragments.EventsFragment">
 
-
-    <androidx.cardview.widget.CardView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/events_list"
+        android:orientation="vertical"
+        tools:listitem="@layout/item_events_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        card_view:cardBackgroundColor="@color/white"
-        card_view:cardCornerRadius="4dp">
-
-        <ListView
-            android:id="@+id/events_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="5dp" />
-
-    </androidx.cardview.widget.CardView>
-
+        android:layout_height="wrap_content"/>
 
 </FrameLayout>
