--- a/AlfaSdk/src/main/res/layout/testing_layout.xml
+++ b/AlfaSdk/src/main/res/layout/testing_layout.xml
@@ -28,7 +28,7 @@
             android:id="@+id/textView25"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="2.3"
+            android:layout_weight="2"
             android:text="SYMBOL"
             android:textSize="@dimen/_14ssp"
             android:textColor="@android:color/white" />
@@ -37,9 +37,9 @@
             android:id="@+id/textView27"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_5sdp"
-            android:layout_weight="0.7"
-            android:gravity="center"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_weight="1"
+            android:gravity="start"
             android:text="MARKET"
             android:textSize="@dimen/_14ssp"
             android:textColor="@android:color/white" />
