--- a/AlfaSdk/src/main/res/drawable-v24/alfa_red_cornerd.xml
+++ b/AlfaSdk/src/main/res/drawable-v24/alfa_red_cornerd.xml
@@ -6,5 +6,5 @@
         android:right="10dp"
         android:top="10dp" />
     <corners android:radius="5dp" />
-    <solid android:color="@color/greyDarkBar" />
+    <solid android:color="@color/alfaRed" />
 </shape>
