--- a/AlfaSdk/src/main/res/layout/fragment_cash_book.xml
+++ b/AlfaSdk/src/main/res/layout/fragment_cash_book.xml
@@ -76,7 +76,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryDark"
+        android:background="@color/alfaRed"
         android:orientation="horizontal"
         android:padding="6dp"
         android:weightSum="3">
